--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,10 +15,10 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
+    <item row="1" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -266,20 +266,81 @@
         <string>Grafica</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="0" column="0" colspan="2">
+        <item row="1" column="4">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="0" colspan="8">
          <widget class="QGraphicsView" name="graphicsView"/>
         </item>
-        <item row="1" column="0">
+        <item row="1" column="1">
+         <widget class="QSpinBox" name="spinBox">
+          <property name="maximum">
+           <number>1000</number>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="6">
          <widget class="QPushButton" name="dibujar">
           <property name="text">
            <string>Dibujar</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="2">
+         <widget class="QSlider" name="horizontalSlider">
+          <property name="maximum">
+           <number>1000</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="7">
          <widget class="QPushButton" name="limpiar">
           <property name="text">
            <string>Limpiar</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="5">
+         <widget class="QComboBox" name="comboBox">
+          <item>
+           <property name="text">
+            <string>Graficar</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Puntos</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fuerza Bruta</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Dijkstra</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QPushButton" name="pushButton_agregar">
+          <property name="text">
+           <string>Agregar PARTICULAS</string>
           </property>
          </widget>
         </item>
