--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -340,6 +340,11 @@
             <string>Dijkstra</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>Kruskal</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item row="1" column="3">
